Archive2/0d/b181f75261e657/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:7:5: error: ‘cout’ was not declared in this scope
     cout<<"Enter first number:";
     ^
main.cpp:7:5: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   ‘std::cout’
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:8:5: error: ‘cin’ was not declared in this scope
     cin>>x;
     ^
main.cpp:8:5: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:60:18: note:   ‘std::cin’
   extern istream cin;  /// Linked to standard input
                  ^
